--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -120,7 +120,7 @@
       <div data-i18n="footer.text" style="border-top:1px solid #eee; margin-top:30px; padding-top:10px; color:#888; font-size:0.85em;">© Proximus.com — All rights reserved. Empowering your productivity.</div>
     </section>
 
-    <div class="env-bar"><span class="env-dot"></span><span id="env-status">DEV Environment</span></div>
+    <div class="env-bar"><span class="env-dot"></span><span id="env-status">UAT Environment</span></div>
   </div>
 
   <!-- Settings overlay (gear) -->
