--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -156,7 +156,7 @@
           <div class="group-title">Developer mode</div>
           <div class="toggle-container">
             <label class="switch" aria-label="Developer mode">
-              <input type="checkbox" id="devModeToggle">
+              <input type="checkbox" id="devModeToggle" checked>
               <span class="slider round"></span>
             </label>
             <span class="toggle-label">Off</span>
