--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -19,17 +19,17 @@
 
     <form id="meetingForm" class="content" autocomplete="off">
       <!-- Building -->
-      <div class="group">
-        <label class="ms-Label" data-i18n="building">Building</label>
+      <div class="field-wrapper">
+        <div class="field-title" data-i18n="building">Building</div>
         <select id="building">
           <option value="Tour and Taxi (02CMP)" selected>Tour and Taxi (02CMP)</option>
           <option value="Brussels - Towers or Boreal (02PLD)">Brussels - Towers or Boreal (02PLD)</option>
         </select>
       </div>
-
+      
       <!-- Business Unit -->
-      <div class="group" style="max-width:200px;">
-        <label class="ms-Label" for="businessUnit" data-i18n="business.unit">Business Unit</label>
+      <div class="field-wrapper" style="max-width:200px;">
+        <div class="field-title" data-i18n="business.unit">Business Unit</div>
         <input id="businessUnit" type="text" placeholder="INS" maxlength="30" />
       </div>
 
