--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -60,12 +60,12 @@
           <div class="check-inline">
             <label for="extraTimeBefore" data-i18n="extra.time.before">Before</label>
             <input id="extraTimeBefore" class="boxed-field__control" type="number" min="0" max="15" value="0" style="width:32px;" />
-            <span>min</span>
+            <span class="ms-Checkbox-label">min</span>
           </div>
           <div class="check-inline">
             <label for="extraTimeAfter" data-i18n="extra.time.after">After</label>
             <input id="extraTimeAfter" class="boxed-field__control" type="number" min="0" max="15" value="0" style="width:32px;" />
-            <span>min</span>
+            <span class="ms-Checkbox-label">min</span>
           </div>
         </div>
       </div>
