--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -35,11 +35,11 @@
       <div class="boxed-field boxed-field--select">
         <div class="boxed-field__title" data-i18n="meeting.type">Meeting Type</div>
         <select id="meetingType" class="boxed-field__control">
-          <option data-i18n="hybird" selected>Hybrid</option>
-          <option data-i18n="in.person">In Person</option>
+          <option data-i18n="hybird" value="Hybrid" selected>Hybrid</option>
+          <option data-i18n="in.person" value="In Person">In Person</option>
         </select>
       </div>
-      <!-- Meeting Type -->
+      <!-- Meeting Type OLD
       <div class="group">
         <div class="ms-Label" data-i18n="meeting.type">Meeting Type</div>
         <div class="checks">
@@ -52,7 +52,7 @@
             <span class="ms-Checkbox-label" data-i18n="in.person">In Person</span>
           </label>
         </div>
-      </div>
+      </div> -->
       <!-- Extra time -->
       <div class="boxed-field">
         <div class="boxed-field__title" data-i18n="extra.time.needed">Extra Time Needed</div>
