--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -114,7 +114,7 @@
 
       <!-- CTA -->
       <button id="generateJson" type="button" class="btn btn-primary ms-Button ms-Button--primary" data-i18n="reserve.meeting.room.button" style="margin-top: 16px; width: 100%;">
-        <span class="ms-Button-label">Book &amp; Reserve Meeting Room</span>
+        <span class="ms-Button-label">Find a meeting room</span>
       </button>
       <pre id="jsonOutput" aria-live="polite" data-i18n="creating.meeting.loading"></pre>
     </form>
