--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -113,7 +113,7 @@
       </div> -->
 
       <!-- CTA -->
-      <button id="generateJson" type="button" class="btn btn-primary ms-Button ms-Button--primary" data-i18n="reserve.meeting.room.button" style="margin-top: 16px; width: 100%;">
+      <button id="generateJson" type="button" class="btn btn-primary br-bottom-right" data-i18n="reserve.meeting.room.button" style="margin-top: 16px; width: 100%;">
         <span class="ms-Button-label">Find a meeting room</span>
       </button>
       <pre id="jsonOutput" aria-live="polite" data-i18n="creating.meeting.loading"></pre>
@@ -136,14 +136,14 @@
         <button id="confirmBtn" class="ms-Button ms-Button--primary" style="min-width:110px;margin-right:18px;">
           <span data-i18n="confirm.button" class="ms-Button-label">Confirm</span>
         </button>
-        <button id="cancelBtn" class="ms-Button" style="min-width:110px;">
+        <button id="cancelBtn" class="btn btn-secondary" style="min-width:110px;">
           <span data-i18n="cancel.button" class="ms-Button-label">Cancel</span>
         </button>
       </div>
       <div id="confirmationStatus" data-i18n="confirmation.message" style="margin-top:24px;min-height:24px;font-size:1.08em;"></div>
       <div id="backBtnDiv" style="display:none; margin-top:20px;">
-        <button id="backBtn" class="ms-Button"><span data-i18n="back.button" class="ms-Button-label">Back</span></button>
-        <button id="closeEventPlannerWindow" class="ms-Button"><span data-i18n="close.button" class="ms-Button-label">Close</span></button>
+        <button id="backBtn" class="btn btn-secondary"><span data-i18n="back.button" class="ms-Button-label">Back</span></button>
+        <button id="closeEventPlannerWindow" class="ms-Button"><span data-i18n="close.button" class="btn btn-primary br-bottom-right">Close</span></button>
       </div>
       <div data-i18n="footer.text" style="border-top:1px solid #eee; margin-top:30px; padding-top:10px; color:#888; font-size:0.85em;">© Proximus.com — All rights reserved. Empowering your productivity.</div>
     </section>
