--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -133,17 +133,21 @@
         <span data-i18n="confirm.cancel.message02" style="font-size:0.97em;color:#444">At this moment the meeting is only visible for you, if you confirm it will be shared to all the attendees.</span>
       </div>
       <div id="confirmCancelBtns" style="margin:28px 0 16px 0;">
-        <button id="confirmBtn" class="ms-Button ms-Button--primary" style="min-width:110px;margin-right:18px;">
-          <span data-i18n="confirm.button" class="ms-Button-label">Confirm</span>
-        </button>
+        
         <button id="cancelBtn" class="btn btn-secondary" style="min-width:110px;">
           <span data-i18n="cancel.button" class="ms-Button-label">Cancel</span>
         </button>
+        <button id="confirmBtn" class="btn btn-primary br-bottom-right" style="min-width:110px;margin-right:18px;">
+          <span data-i18n="confirm.button" class="ms-Button-label">Confirm</span>
+        </button>
+
       </div>
       <div id="confirmationStatus" data-i18n="confirmation.message" style="margin-top:24px;min-height:24px;font-size:1.08em;"></div>
       <div id="backBtnDiv" style="display:none; margin-top:20px;">
-        <button id="backBtn" class="btn btn-secondary"><span data-i18n="back.button" class="ms-Button-label">Back</span></button>
-        <button id="closeEventPlannerWindow" class="ms-Button"><span data-i18n="close.button" class="btn btn-primary br-bottom-right">Close</span></button>
+        <button id="backBtn" class="btn btn-secondary">
+          <span data-i18n="back.button" class="ms-Button-label">Back</span></button>
+        <button id="closeEventPlannerWindow" class="btn btn-primary br-bottom-right">
+          <span data-i18n="close.button" class="ms-Button-label">Close</span></button>
       </div>
       <div data-i18n="footer.text" style="border-top:1px solid #eee; margin-top:30px; padding-top:10px; color:#888; font-size:0.85em;">© Proximus.com — All rights reserved. Empowering your productivity.</div>
     </section>
