--- a/taskpaneSSO.new.html
+++ b/taskpaneSSO.new.html
@@ -19,7 +19,7 @@
 
     <form id="meetingForm" class="content" autocomplete="off">
       <!-- Building -->
-      <div class="boxed-field">
+      <div class="boxed-field boxed-field--select">
         <div class="boxed-field__title" data-i18n="building">Building</div>
         <select id="building" class="boxed-field__control">
           <option value="Tour and Taxi (02CMP)" selected>Tour and Taxi (02CMP)</option>
@@ -28,11 +28,18 @@
       </div>
       <!-- Room amenities (dynamic; includes 'Additional Seats') -->
       <div class="group">
-        <div class="ms-Label" data-i18n="room.amenities">Room Amenities</div>
         <div id="amenitiesContainer" aria-live="polite"></div>
       </div>
 
       <!-- Meeting Type -->
+      <div class="boxed-field boxed-field--select">
+        <div class="boxed-field__title" data-i18n="meeting.type">Meeting Type</div>
+          <select id="meetingType" name="meetingType" class="boxed-field__control">
+            <option data-i18n="hybird" value="Hybrid" selected>Hybrid</option>
+            <option data-i18n="in.person" value="In Person">In Person</option>
+          </select>
+      </div>
+      <!-- Meeting Type OLD
       <div class="group">
         <div class="ms-Label" data-i18n="meeting.type">Meeting Type</div>
         <div class="checks">
@@ -45,9 +52,38 @@
             <span class="ms-Checkbox-label" data-i18n="in.person">In Person</span>
           </label>
         </div>
+      </div> -->
+      <!-- Extra time -->
+      <div class="boxed-field">
+        <div class="boxed-field__title" data-i18n="extra.time.needed">Extra Time Needed</div>
+        <div class="two-col">
+          <div class="check-inline">
+            <label for="extraTimeBefore" data-i18n="extra.time.before">Before</label>
+            <input id="extraTimeBefore" class="boxed-field__control" type="number" min="0" max="15" value="0" style="width:32px;" />
+            <span class="ms-Checkbox-label">min</span>
+          </div>
+          <div class="check-inline">
+            <label for="extraTimeAfter" data-i18n="extra.time.after">After</label>
+            <input id="extraTimeAfter" class="boxed-field__control" type="number" min="0" max="15" value="0" style="width:32px;" />
+            <span class="ms-Checkbox-label">min</span>
+          </div>
+        </div>
       </div>
 
-      <!-- Toggles -->
+      <div class="boxed-field">
+        <div class="two-col">
+          <label class="ms-Checkbox">
+            <input id="isPrivate" type="checkbox" />
+            <span class="ms-Checkbox-label" data-i18n="private.meeting">Private meeting</span>
+          </label>
+          <label class="ms-Checkbox">
+            <input id="onBehalfOf" type="checkbox" />
+            <span class="ms-Checkbox-label" data-i18n="on.behalf.of">On behalf of</span>
+          </label>
+        </div>
+      </div>
+
+      <!-- Toggles 
       <div class="group" style="display:flex; gap:22px;">
         <label class="ms-Checkbox">
           <input id="isPrivate" type="checkbox" />
@@ -57,9 +93,9 @@
           <input id="onBehalfOf" type="checkbox" />
           <span class="ms-Checkbox-label" data-i18n="on.behalf.of">On Behalf Of</span>
         </label>
-      </div>
+      </div> -->
 
-      <!-- Extra time -->
+      <!-- Extra timez
       <div class="group">
         <div class="ms-Label" data-i18n="extra.time.needed">Extra Time Needed</div>
         <div class="row" style="display:flex; gap:16px;">
@@ -74,11 +110,11 @@
             <span>min</span>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- CTA -->
-      <button id="generateJson" type="button" class="btn btn-primary ms-Button ms-Button--primary" data-i18n="reserve.meeting.room.button" style="margin-top: 16px; width: 100%;">
-        <span class="ms-Button-label">Book &amp; Reserve Meeting Room</span>
+      <button id="generateJson" type="button" class="btn btn-primary br-bottom-right" data-i18n="reserve.meeting.room.button" style="margin-top: 16px; width: 100%;">
+        <span class="ms-Button-label">Find a meeting room</span>
       </button>
       <pre id="jsonOutput" aria-live="polite" data-i18n="creating.meeting.loading"></pre>
     </form>
@@ -97,17 +133,21 @@
         <span data-i18n="confirm.cancel.message02" style="font-size:0.97em;color:#444">At this moment the meeting is only visible for you, if you confirm it will be shared to all the attendees.</span>
       </div>
       <div id="confirmCancelBtns" style="margin:28px 0 16px 0;">
-        <button id="confirmBtn" class="ms-Button ms-Button--primary" style="min-width:110px;margin-right:18px;">
-          <span data-i18n="confirm.button" class="ms-Button-label">Confirm</span>
-        </button>
-        <button id="cancelBtn" class="ms-Button" style="min-width:110px;">
+        
+        <button id="cancelBtn" class="btn btn-secondary" style="min-width:110px;">
           <span data-i18n="cancel.button" class="ms-Button-label">Cancel</span>
         </button>
+        <button id="confirmBtn" class="btn btn-primary br-bottom-right" style="min-width:110px;margin-right:18px;">
+          <span data-i18n="confirm.button" class="ms-Button-label">Confirm</span>
+        </button>
+
       </div>
       <div id="confirmationStatus" data-i18n="confirmation.message" style="margin-top:24px;min-height:24px;font-size:1.08em;"></div>
       <div id="backBtnDiv" style="display:none; margin-top:20px;">
-        <button id="backBtn" class="ms-Button"><span data-i18n="back.button" class="ms-Button-label">Back</span></button>
-        <button id="closeEventPlannerWindow" class="ms-Button"><span data-i18n="close.button" class="ms-Button-label">Close</span></button>
+        <button id="backBtn" class="btn btn-secondary">
+          <span data-i18n="back.button" class="ms-Button-label">Back</span></button>
+        <button id="closeEventPlannerWindow" class="btn btn-primary br-bottom-right">
+          <span data-i18n="close.button" class="ms-Button-label">Close</span></button>
       </div>
       <div data-i18n="footer.text" style="border-top:1px solid #eee; margin-top:30px; padding-top:10px; color:#888; font-size:0.85em;">© Proximus.com — All rights reserved. Empowering your productivity.</div>
     </section>
