--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -161,7 +161,7 @@
     <button id="cancelBtn" class="btn btn-secondary btn-lg btn-wide" type="button">
       <span data-i18n="cancel.button" class="ms-Button-label">Cancel</span>
     </button>
-    <button id="confirmBtn" class="btn btn-primary btn-lg btn-wide" type="button">
+    <button id="confirmBtn" class="btn btn-primary btn-lg btn br-bottom-right btn-wide" type="button">
       <span data-i18n="confirm.button" class="ms-Button-label">Confirm</span>
     </button>
   </div>
