--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -119,7 +119,6 @@
       <pre id="jsonOutput" aria-live="polite" data-i18n="creating.meeting.loading"></pre>
     </form>
 
-    <!-- Confirmation step (used by JS) -->
 <!-- Confirmation step (used by JS) -->
 <section id="confirmationSection" class="confirm-card is-success" style="display:none;">
   <input type="hidden" id="confirmEventID" />
@@ -161,7 +160,7 @@
     <button id="cancelBtn" class="btn btn-secondary btn-lg btn-wide" type="button">
       <span data-i18n="cancel.button" class="ms-Button-label">Cancel</span>
     </button>
-    <button id="confirmBtn" class="btn btn-primary btn-lg btn br-bottom-right btn-wide" type="button">
+    <button id="confirmBtn" class="btn btn-primary btn-lg btn-wide" type="button">
       <span data-i18n="confirm.button" class="ms-Button-label">Confirm</span>
     </button>
   </div>
@@ -177,6 +176,8 @@
       <span data-i18n="close.button" class="ms-Button-label">Close</span>
     </button>
   </div>
+
+  <div class="confirm-footer" data-i18n="footer.text">© Proximus.com — All rights reserved. Empowering your productivity.</div>
 </section>
 
     <div class="env-bar"><span class="env-dot"></span><span id="env-status">UAT Environment</span></div>
